成功使用spark解析kafka离线json格式数据文本。